# InflogScav-2025

OpenGl/: .gitignore  CMakeLists.txt  Dockerfile  Readme.md  main.cpp  run_cube.sh  run_cube_wayland.sh
OpenGl/shaders/: phong.fs.glsl  phong.vs.glsl  vertex.glsl
OpenGl/src/: input.cpp  input.h
